# python-sdk

./: .gitignore  .readthedocs.yml  LICENSE  MANIFEST  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py  test.py
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
dblstats/: __init__.py  client.py  version.py
dblstats/objects/: __init__.py  bot.py  dblstats_auctions.py  dblstats_client.py  dblstats_widgets.py  exceptions.py  user.py
dblstats/utils/: __init__.py  async_fetcher.py  convertors.py  endpoints.py  kwargs_parser.py  repr.py
docs/: api.rst  bot.rst  client.rst  conf.py  examples.rst  index.rst  raw-api-reference.rst  repository.rst  requirements.txt  support-server.rst
docs/_static/: script.js
docs/source/: conf.py  index.rst
examples/: basic_auctions_bot.py  basic_bot_info.py  basic_info_bot.py  basic_widget_bot.py
tests/: requirements.txt  test_client.py  util.py
tests/mocks/: compare_bot_monthly_votes.json  compare_bot_review_count.json  compare_bot_server_count.json  compare_bot_total_votes.json  compare_bot_total_votes_4x.json  compare_bots.json  get_bot.json  get_historical_bot_monthly_votes.json  get_historical_bot_review_count.json  get_historical_bot_server_count.json  get_historical_bot_total_votes.json  get_recent_bot_stats.json  get_top_bots.json  get_users_bot.json  search_bots_by_name.json  search_bots_by_tag.json
topstats/: __init__.py  bot.py  client.py  data.py  errors.py  ratelimiter.py  util.py  version.py
