[build-system]
requires = ["setuptools"]

[project]
name = "topstats"
version = "1.1.2"
description = "A simple API wrapper for topstats.gg written in Python."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "null8626" }]
keywords = ["discord", "discord-bot", "topgg"]
dependencies = ["aiohttp>=3.13.2", "yarl>=1.22.0"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities"
]
requires-python = ">=3.10"

[project.urls]
Documentation = "https://topstats.readthedocs.io/en/latest/"
"Raw API Documentation" = "https://docs.topstats.gg/docs/"
Repository = "https://github.com/top-stats/python-sdk"
"Support server" = "https://discord.gg/jjEauJXuZc"